--- a/submission/AdaptiveND_PrimieroAllo_revised_2.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised_2.tex
@@ -688,7 +688,7 @@ The derivation of a minimal disjunction of abnormalities and the formation of th
 \noindent\textsl{Proof.}~If $\Gamma; \cdot \vdash_{s - n  + (i-1)} \Delta_i^{min}$ is a premise used to derive $\Turn{\Gamma;\cdot}{\Phi(\Gamma)}$, adding a premise $\Gamma; \cdot \vdash_{s - n  + (j-1)} \Delta_j^{min}$ for some $\Delta_j$ that was already derived at some stage $s - (n + m)$ would not lead to the violation of the side-condition for the application of \textsc{Choice}. Let $\Turn{\Gamma;\cdot}{\Phi'(\Gamma)}$ be the conclusion obtained by adding this premise, and note that each $\phi' \in \Phi'(\Gamma)$ can be obtained by extending a $\phi \in \Phi(\Gamma)$ with some member of $\Delta_j$.\qed
 
 \begin{proposition}\label{prop:minchoice}
-    If $\Turn{\Gamma;\cdot}{{\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}}$ is derived from $\Gamma; \cdot \vdash_{\mathsf{s-1}}\Phi(\Gamma)$ and $\Lambda$ is the set of all $\Delta^{min}$ derived up to stage $s$ that are still minimal at $s$, then $\sf{choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ is a subset of some minimal choice-set from $\Lambda$, and for each minimal choice-set ${\sf choice_{j}}(\{\Delta_{1},\ldots, \Delta_{n}, \ldots, \Delta_{n+m}\})^{min}$ from $\Lambda$ there is a ${\sf choice_{k}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min} \in \Phi(\Gamma)$ such that ${\sf choice_{j}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min} \subseteq {\sf choice_{j}}(\{\Delta_{1},\ldots, \Delta_{n}, \ldots, \Delta_{n+m}\})^{min}$.
+    If $\Turn{\Gamma;\cdot}{{\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}}$ is derived from $\Gamma; \cdot \vdash_{\mathsf{s-1}}\Phi(\Gamma)$ and $\Lambda$ is the set of all $\Delta^{min}$ derived up to stage $s$ that are still minimal at $s$, then $\sf{choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ is a subset of some minimal choice-set from $\Lambda$, and for each minimal choice-set ${\sf choice_{j}}(\{\Delta_{1},\ldots, \Delta_{n}, \ldots, \Delta_{n+m}\})^{min}$ from $\Lambda$ there is a ${\sf choice_{k}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min} \in \Phi(\Gamma)$ such that ${\sf choice_{k}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min} \subseteq {\sf choice_{j}}(\{\Delta_{1},\ldots, \Delta_{n}, \ldots, \Delta_{n+m}\})^{min}$.
 \end{proposition}
 \noindent\textsl{Proof.}~Assume $\Turn{\Gamma;\cdot}{{\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}}$ is obtained by an application of \textsc{MinChoice} to a judgement with $\Phi(\Gamma)$ as a consequent. Let $\Delta_{n+1}$ be minimal at stage $s$, and assume that $\Phi'(\Gamma)$ is derivable from judgements with
 $\Delta_1, \ldots \Delta_{n+1}$ as consequent. By Proposition \ref{prop:choice} we know that ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ is a subset of one or more members of $\Phi'(\Gamma)$. Let $\psi_1, \ldots, \psi_m$ be an enumeration of the members of
@@ -780,21 +780,25 @@ with
 for each ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min} \in \Phi(\Gamma)$.
 
 \begin{mathpar}
-\infer*[right={\scriptsize$\XBox$M2}]{\Turn{\Gamma;\Theta^{-}}{\psi}\\
+\infer*[right={\scriptsize$\XBox$M2}]{\Turn{\Gamma;\Theta_1^{-}}{\psi}\\ \ldots \\\TurnNextn{\Gamma;\Theta_n^{-}}{\psi}\\
 \TurnPrime{\Gamma; \cdot}{\mathsf{choice_i}(\{\Delta_1, \ldots, \Delta_n\})^{min}}\\ (\dag) \\ (\ddag)}
-{\TurnMarkedMAflex{max(s, s')+1}{\Gamma; \Theta^{-}}{\psi}}
+{\TurnMarkedMAflex{max(s+n, s')+1}{\Gamma; \Theta^{-}}{\psi}}
 \end{mathpar}
 
 with
-\[
-    \Theta \cap \mathsf{choice_i}(\{\Delta_1, \ldots, \Delta_n\})^{min} \ne \emptyset, \tag{\dag}
-\]
+\begin{align*}
+    \begin{split}
+    \Theta_1 & \cap \mathsf{choice_i}(\{\Delta_1, \ldots, \Delta_n\})^{min} \ne \emptyset,\\
+    \vdots&\\
+    \Theta_n & \cap \mathsf{choice_i}(\{\Delta_1, \ldots, \Delta_n\})^{min} \ne \emptyset,
+    \end{split}
+    \tag{\dag}
+\end{align*}
 
 and
-{\color{red}
 \[
-    {\Gamma; \Theta' \vdash_{\mathsf{t < s'}} \psi \Longrightarrow \Theta' \cap \mathsf{choice_i}(\{\Delta_1, \ldots, \Delta_n\})^{min} \ne \emptyset \tag{\ddag}}
-\]}
+    \text{there is no } \Gamma; \Theta' \vdash_{\mathsf{t < s}} \psi \text{ with } \Theta' \not\in \{\Theta_1, \ldots, \Theta_n\}. \tag{\ddag}}
+\]
 
 
 \caption{Marking for Minimal Abnormality}\label{fig:MA}
